content design, image opt

--- a/360-degree-view.html
+++ b/360-degree-view.html
@@ -502,13 +502,13 @@
             <!-- media item (left) -->
             <figure class="media-item float-l mw-20em lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-report-sample-01-1x1.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
-                <img src="images/content/report-sample-011x1.jpg" data-src="images/content/report-sample-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-report-sample-01-1x1.jpg" class="lazyload" alt="Sample of analysis report document.">
+                <img src="images/content/report-sample-011x1.jpg" data-src="images/content/report-sample-01-1x1.jpg" class="lazyload" alt="Sample of analysis report document.">
                 <noscript>
-                  <img src="images/content/report-sample-01-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/report-sample-01-1x1.jpg" alt="Sample of analysis report document.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
             </figure>
 
             <p>The process of in-depth customer analysis is often referred to as a 360-degree customer view. The name speaks for itself, referring to the importance of learning everything you can about customers, such as their purchasing patterns or social media presence. Fortunately, in the era of big data, this has become much easier. Analysts have access to many more sources of information, like social media, mobile data, and sensor data via connected devices making up the Internet of Things, all of which provide clearer insights into customer behavior. Not to mention, improvements in computing technology mean we can analyze larger data sets in real-time, and the rise of big data in the cloud solutions has made big data analytics accessible to people who are notdata scientists.</p>
@@ -531,13 +531,13 @@
             <!-- media item (left) -->
             <figure class="media-item float-r mw-25em lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-04-tall.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
-                <img src="images/content/img-content-app-user-04-wide.jpg" data-src="images/content/img-content-app-user-04-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-04-tall.jpg" class="lazyload" alt="A person working on at their desk with a smart device.">
+                <img src="images/content/img-content-app-user-04-wide.jpg" data-src="images/content/img-content-app-user-04-wide.jpg" class="lazyload" alt="A person working on at their desk with a smart device.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-04-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-04-1x1.jpg" alt="A person working on at their desk with a smart device.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
             </figure>
 
             <h2 id="enhance-customer-experience" class="h3 pt-1">Sentiment Analysis to Enhance the Customer Experience</h2>
