--- a/analytics.html
+++ b/analytics.html
@@ -520,9 +520,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="sentiment-analysis.html"><img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
+                        <a href="sentiment-analysis.html"><img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Illustration of analytic icons."></a>
                         <noscript>
-                          <img src="images/content/img-content-analytics-wide.jpg" alt="Group of application interfaces.">
+                          <img src="images/content/img-content-analytics-wide.jpg" alt="Illustration of analytic icons.">
                         </noscript>
                       </picture>
                     </figure>
@@ -543,9 +543,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="data-analysis.html"><img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
+                        <a href="data-analysis.html"><img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="A happy woman in a team meeting."></a>
                         <noscript>
-                          <img src="images/content/img-content-testing-wide.jpg" alt="Group of application interfaces.">
+                          <img src="images/content/img-content-testing-wide.jpg" alt="A happy woman in a team meeting.">
                         </noscript>
                       </picture>
                     </figure>
@@ -566,15 +566,15 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="data-analysis.html"><img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
+                        <a href="data-analysis.html"><img src="images/content/img-content-bigdata-analysis-01-wide.jpg" data-src="images/content/img-content-bigdata-analysis-01-wide.jpg" class="lazyload" alt="A woman looking at a wall of illustrated icons related to data analysis."></a>
                         <noscript>
-                          <img src="images/content/img-content-integration-team-wide.jpg" alt="Group of application interfaces.">
+                          <img src="images/content/img-content-bigdata-analysis-01-wide.jpg" alt="A woman looking at a wall of illustrated icons related to data analysis.">
                         </noscript>
                       </picture>
                     </figure>
                     <!-- copy -->
                     <div class="card-block">
-                      <h4 class="card-title">Ad Hoc Data Analysis on Big Data Sets</h4>
+                      <h4 class="card-title">Ad Hoc Big Data Analysis</h4>
                       <p class="card-text"></p>
                       <a href="data-analysis.html" class="btn btn-round btn-primary">Read More</a>
                     </div>
@@ -587,15 +587,15 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="real-time-analytics.html"><img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
+                        <a href="real-time-analytics.html"><img src="images/content/img-content-app-user-04-wide.jpg" data-src="images/content/img-content-app-user-04-wide.jpg" class="lazyload" alt="A person working on at their desk with a smart device."></a>
                         <noscript>
-                          <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                          <img src="images/content/img-content-app-user-04-wide.jpg" alt="A person working on at their desk with a smart device.">
                         </noscript>
                       </picture>
                     </figure>
                     <!-- copy -->
                     <div class="card-block">
-                      <h4 class="card-title">Reaping the Benefits of Real-Time Analytics</h4>
+                      <h4 class="card-title">Benefits of Real-Time Analytics</h4>
                       <p class="card-text"></p>
                       <a href="real-time-analytics.html" class="btn btn-round btn-primary">Read More</a>
                     </div>
