--- a/data-analysis.html
+++ b/data-analysis.html
@@ -484,10 +484,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-bigdata-analysis-01-1x1.jpg" class="lazyload" alt="A woman looking at a wall of illustrated icons related to data analysis.">
+                <img src="images/content/img-content-bigdata-analysis-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A woman looking at a wall of illustrated icons related to data analysis.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="A woman looking at a wall of illustrated icons related to data analysis.">
                 </noscript>
               </picture>
             </figure>
@@ -502,13 +503,13 @@
 
             <!-- media item (full) -->
             <figure class="media-item w-100 lazyload">
-              <picture>            
-                <img src="images/content/img-content-data-sets.jpg" data-src="images/content/img-content-data-sets.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <img src="images/content/img-content-data-sets.jpg" data-src="images/content/img-content-data-sets.jpg" class="lazyload" alt="Table example of data analysis features.">
                 <noscript>
-                  <img src="images/content/img-content-data-sets.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-data-sets.jpg" alt="Table example of data analysis features.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <figcaption class="figure-caption">Table example of data analysis features.</figcaption>
             </figure>
 
             <h2 id="what-is-driving-ad-hoc-analysis-on big-data-sets" class="pt-1">What is driving ad-hoc analysis on big data sets?</h2>
@@ -517,15 +518,15 @@
 
             <p>Let's look at the role of ad hoc analytics on big data sets to achieve a 360-degree view of customers for an organization trying to understand why its customer churn has increased. By querying its structured, internal data the company can determine things like products losing customers, price changes that might have impacted defection, and changes in customer service metrics. But these only tell part of the story.</p>
 
-            <!-- media item (left) -->
+            <!-- media item (right) -->
             <figure class="media-item float-r mw-25em lazyload">
               <picture>            
-                <img src="images/content/img-content-360.jpg" data-src="images/content/img-content-360.jpg" class="lazyload" alt="Group of application interfaces.">
+                <img src="images/content/img-content-360.jpg" data-src="images/content/img-content-360.jpg" class="lazyload" alt="360-degree view of customer.">
                 <noscript>
-                  <img src="images/content/img-content-360-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-360-1x1.jpg" alt="360-degree view of customer.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <figcaption class="figure-caption">360-degree view of customer.</figcaption>
             </figure>
 
             <p>An extended 360-degree view using ad hoc analytics on big data sets allows the organization to bring in additional unstructured information, both internal and external to the company, to understand other factors relevant to customer churn. Data like social media comments, the results of customer satisfaction surveys, call detail records for customer service, and complaints received via email help the company fully understand and respond to its high rate of customer churn.</p>
@@ -534,28 +535,27 @@
 
             <p>Most businesses processing ad hoc analytics on big data sets use Hadoop because it's designed to handle huge volumes of data across many nodes that can be added as needed. It leverages parallel processing across commodity servers, making it more affordable to scale than other options for big data. Plus, Hadoop accommodates any data format, requires no specialized schema and provides high availability.</p>
 
-            <p class="lead">However, on-premise Hadoop deployment presents many challenges for ad hoc analysis. Here, we'll focus on just some of the major ad hoc analysis challenges.</p>
+            <p class="lead mb-1">However, on-premise Hadoop deployment presents many challenges for ad hoc analysis. Here, we'll focus on just some of the major ad hoc analysis challenges.</p>
 
-            <ul class="list-styled block text-lg">
+            <ul class="list-styled mb-2 text-md">
               <li>What customers are saying about your company?</li>
               <li>How customers interact with you?</li>
               <li>How well you serve customers?</li>
               <li>How to improve every interaction</li>
-            </ul>
-
-            
+            </ul>             
 
             <p>Armed with this type of information, businesses will not only understand how customers make decisions, but allow marketers to divide markets into smaller groups. This process is called micro-segmentation, which is a more granular form of segmentation that usually separates potential customers per the demographics or psychographics. More refined segmentation allows marketers to create more targeted and effective ads and messaging.</p>
 
             <!-- media item (right) -->
             <figure class="media-item float-r mw-25em lazyload">
-              <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-servers-tall.jpg" class="lazyload" alt="Apache Hive data warehouse.">
+                <img src="images/content/img-content-server-wide.jpg" data-src="images/content/img-content-server-wide.jpg" class="lazyload" alt="Apache Hive data warehouse.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-server-1x1.jpg" alt="Apache Hive data warehouse.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <figcaption class="figure-caption">Apache Hive data warehouse.</figcaption>
             </figure>
 
             <h2 id="batch-processing" class="pt-1">Batch Processing</h2>
