--- a/real-time-analytics.html
+++ b/real-time-analytics.html
@@ -484,13 +484,15 @@
         <div class="container">
 
             <!-- media item (right) -->
-            <figure class="media-item mw-20em float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-analytics-1x1.jpg" data-src="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+            <figure class="media-item float-r mw-20em lazyload">
+              <picture>   
+              <source media="(min-width: 40em)" srcset="images/content/img-content-bigdata-analysis-03-1x1.jpg" class="lazyload" alt="Illustration of real-time analysis related icons.">        
+                <img src="images/content/img-content-bigdata-analysis-03-wide-short.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide-short.jpg" class="lazyload" alt="Illustration of real-time analysis related icons.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-bigdata-analysis-03-wide-short.jpg" alt="Illustration of real-time analysis related icons.">
                 </noscript>
               </picture>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
             </figure>
 
             <h1 id="benefits-of-real-time-analytics" class="display-4">Reaping the Benefits of Real-Time Analytics</h1>
@@ -501,14 +503,14 @@
             </p>
 
             <!-- media item (full) -->
-            <figure class="media-item pt-pb-1 w-100 lazyload">
+            <figure class="media-item pt-2 w-100 lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <img src="images/content/img-content-app-user-03-wide-short.jpg" data-src="images/content/img-content-app-user-03-wide-short.jpg" class="lazyload" alt="A person using a data analysis application.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-03-wide-short.jpg" alt="A person using a data analysis application.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
             </figure>
 
             <h2 id="split-testing" class="pt-1">Split Testing</h2>
@@ -516,6 +518,18 @@
             <p>It refers to running a simultaneous experiment between multiple variants to see which performs the best. For web designers, this could be which page layout do people interact better with, or which banner ad has the best click-through rate. Analysts can use this process to test and optimize their products in minutes. This could be very useful for mobile developers looking to monetize their games. In-app purchases are a common source of revenue, so developers could test a number of different purchase buttons or links to see which are the most effective at driving conversion.</p>
 
             <p>This isn't just for game developers; it could be just as useful for online retailers. Researchers could apply the same process to see which page layouts are most useful for their customers. Do people respond better to more search results on a page? Will removing a sidebar and replacing it with recommended items lead to more sales? These are all important questions that split tests can quickly answer, leading to faster turnaround times and getting the right results sooner.</p>
+
+            <!-- media item (right) -->
+            <figure class="media-item float-r mw-20em lazyload">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-device-user-01-tall.jpg" class="lazyload" alt="Mobile phone with person using applications.">
+                <img src="images/content/img-content-device-user-01-wide.jpg" data-src="images/content/img-content-device-user-01-wide.jpg" class="lazyload" alt="Mobile phone with person using applications.">
+                <noscript>
+                  <img src="images/content/img-content-device-user-01-1x1.jpg" alt="Mobile phone with person using applications.">
+                </noscript>
+              </picture>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+            </figure>
 
             <h2 id="targeted-content" class="pt-1">Targeted Content Based on User Preferences</h2>
 
