--- a/sentiment-analysis.html
+++ b/sentiment-analysis.html
@@ -485,12 +485,14 @@
 
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-02-1x1.jpg" class="lazyload" alt="Customer analysis team sitting around a desk.">
+                <img src="images/content/img-content-customer-analysis-02-wide.jpg" data-src="images/content/img-content-customer-analysis-02-wide.jpg" class="lazyload" alt="Customer analysis team sitting around a desk.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-device-user-02-1x1.jpg" alt="Customer analysis team sitting around a desk.">
                 </noscript>
               </picture>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
             </figure>
 
             <h1 id="sentiment-analysis" class="display-4">Sentiment Analysis</h1>
@@ -500,19 +502,31 @@
             <p class="lead">The key to business success with sentiment data lies in the ability to mine vast stores of unstructured social data for actionable insights. That's a formidable task, requiring sophisticated tools such as Natural Language Processing (NLP) to carry out comprehensive examinations of the sentiments of social media users. Fortunately, big data analytics platforms such as cloud-based Hadoop are up to the challenge. What follows is a look at how businesses can find value in sentiment analysis data.</p>
 
             <!-- media item (full) -->
-            <figure class="media-item pt-pb-1 w-100 lazyload">
-              <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+            <figure class="media-item pt-2 w-100 lazyload">
+              <picture>
+                <!--<source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-03-wide-short.jpg" class="lazyload" alt="Customer analysis report.">-->
+                <img src="images/content/img-content-customer-analysis-03-wide-short.jpg" data-src="images/content/img-content-customer-analysis-03-wide-short.jpg" class="lazyload" alt="Customer analysis report.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-device-user-03-wide-short.jpg" alt="Customer analysis report.">
                 </noscript>
               </picture>
-              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+              <figcaption class="figure-caption">Customer analysis report.</figcaption>
             </figure>
 
             <h2 id="page-section-three" class="h3 pt-1">Enhancing the customer experience</h2>
 
             <p>Customer experiences fall into three basic categories, positive, negative or neutral. Through sentiment analysis, companies can detect the tone and temperament of each word found in a customer's social postings and categorize those sentiments as either positive, negative or neutral. Armed with this information, businesses can gain valuable insights into what they are doing right about products, services and customer support—positive sentiments—and what they need to work on—negative sentiments—to enhance the overall customer experience.</p>
+
+            <!-- media item (right) -->
+            <figure class="media-item circle-mask mask-outside float-r lazyload">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-bigdata-analysis-04-1x1.jpg" class="lazyload" alt="Customer analysis report.">
+                <img src="images/content/img-content-bigdata-analysis-04-wide.jpg" data-src="images/content/img-content-bigdata-analysis-04-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <noscript>
+                  <img src="images/content/img-content-bigdata-analysis-04-1x1.jpg" alt="Group of application interfaces.">
+                </noscript>
+              </picture>
+            </figure>
 
             <h2 id="page-section-three" class="h3 pt-1">Gaining competitive advantage</h2>
 
@@ -523,16 +537,6 @@
             <p>Sentiment analysis data provides businesses with powerful, insight—rich information about current and future customers—insights that can lead to new business opportunities and possibilities. However, sentiment analysis insights alone aren't enough. To create actionable strategies businesses will need to integrate business intelligence insights with human insights and other important metrics. Sentiment as a sole metric is not enough.</p>
 
             <h2 id="page-section-three" class="h3 pt-1">Revitalizing a brand</h2>
-
-            <!-- media item (right) -->
-            <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
-                <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
-                </noscript>
-              </picture>
-            </figure>
 
             <p>Branding is all about perception. And sentiment analysis allows businesses to quantify the perceptions that current and potential customers may have about their products and services, their customer experience, online content, marketing and social campaigns. In short, their overall brand. Access to negative and lukewarm sentiment analysis data helps companies develop more positive and engaging branding and marketing strategies to bring new life and credibility to a stagnant brand.</p>
 
