content design, image opt

--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -484,11 +484,12 @@
         <div class="container">
 
           <!-- media item (right) -->
-          <figure class="media-item circle-mask mask-outside float-r lazyload">
-            <picture>            
-              <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+          <figure class="media-item circle-mask-md mask-outside float-r lazyload">
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-testing-01-tall.jpg" class="lazyload" alt="A man drawing on a glass window.">
+              <img src="images/content/img-content-testing-01-wide.jpg" data-src="images/content/img-content-testing-01-wide.jpg" class="lazyload" alt="A man drawing on a glass window.">
               <noscript>
-                <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                <img src="images/content/img-content-testing-01-1x1.jpg" alt="A man drawing on a glass window.">
               </noscript>
             </picture>
           </figure>
@@ -505,26 +506,26 @@
             <div class="row content-row-md pt-2">
 
               <!-- media item -->
-              <figure class="media-item col-md-4 pr-2 lazyload">
+              <!--<figure class="media-item col-md-4 pr-2 pl-0 lazyload">
                 <picture>
-                  <source media="(min-width: 48em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="Group of application interfaces.">
-                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <source media="(min-width: 48em)" srcset="images/content/img-content-testing-01-tall.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-testing-01-wide.jpg" data-src="images/content/img-content-testing-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-testing-01-1x1.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
-              </figure>
+              </figure>-->
 
               <!-- list -->
-              <ul class="list-styled col-md-8 pl-2">
-                <p class="h2 list-title">Key Challenges</p>
+              <ul class="list-styled col-md-12 pl-2">
+                <h2 class="list-title">Key Challenges</h2>
                 <li>Testing for ever-changing environments</li>
                 <li>Testing for a huge range of Devices, Browsers, Environments</li>
                 <li>Release frequency in the world of Agile &amp; DevOps</li>
                 <li>Testing complimenting speed to market</li>
                 <li>Increasing Testing cost: While IT spend is forecast to remain the same or rise just a little:</li>
                 <br>
-                <blockquote class="blockquote">
+                <blockquote class="blockquote mw-48em">
                   <p class="h5 mb-0">The spend on quality assurance (QA) and testing has risen to an average of 35% of total IT spend~. This reflectsthe need to cater to the increased software releases and the need to test them across multiple scenarios, devices and environments.</p>
                   <footer class="blockquote-footer"><cite title="Source Title">CapgeminiWorld Quality Report 2015</cite></footer>
                 </blockquote>
@@ -532,7 +533,7 @@
 
             </div>
 
-            <div class="section-headline align-center pt-pb-3">
+            <div class="section-headline align-center pt-2 pb-3">
 
               <h2 id="solutions" class="text-xl">Solutions</h2>
             
@@ -551,8 +552,8 @@
                 <li>One stop shop platform for software testing</li>
                 <li>Access to expert test capability</li>
                 <li>Leverage Concordus Apps' digital test automation frameworks for mobile and web automation</li>
-                <li>No overheads of:
-                  <ul>
+                <li class="list-parent">No overheads of:
+                  <ul class="list-nested">
                     <li>Managing mobile devices &amp; OS versions etc.</li>
                     <li>Managing hardware, OS updates &amp; IE versions etc.</li>
                     <li>Managing high cost testing and automation resources</li>
@@ -564,11 +565,12 @@
               </ul>
 
               <!-- media item -->
-              <figure class="media-item rounded-mask col-lg-4 p-0 lazyload">
-                <picture>            
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <figure class="media-item col-lg-4 pr-0 lazyload">
+                <picture>
+                  <source media="(min-width: 48em)" srcset="images/content/img-content-app-user-05-1x1.jpg" class="lazyload" alt="A person using a smart tablet.">
+                  <img src="images/content/img-content-app-user-05-wide.jpg" data-src="images/content/img-content-app-user-05-wide.jpg" class="lazyload" alt="A person using a smart tablet.">
                   <noscript>
-                    <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-app-user-05-1x1.jpg" alt="A person using a smart tablet.">
                   </noscript>
                 </picture>
               </figure>
@@ -579,26 +581,27 @@
             <div class="row content-row-lg pt-2">
 
               <!-- media item -->
-              <figure class="media-item col-lg-4 pr-2 lazyload">
-                <picture>            
-                  <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
+              <figure class="media-item col-lg-4 pr-4 lazyload">
+                <picture>
+                  <source media="(min-width: 48em)" srcset="images/content/img-content-customer-analysis-1x1.jpg" class="lazyload" alt="People looking over company reports.">
+                  <img src="images/content/img-content-customer-analysis-wide.jpg" data-src="images/content/img-content-customer-analysis-wide.jpg" class="lazyload" alt="People looking over company reports.">
                   <noscript>
-                    <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-customer-analysis-1x1.jpg" alt="People looking over company reports.">
                   </noscript>
                 </picture>
               </figure>
 
               <!-- list -->
               <ul class="list-styled col-lg-8 pl-2">
-                <p class="h2 list-title">Engagement Model</p>
+                <h2 class="list-title">Engagement Model</h2>
                 <p class="lead">Here's the typical method of engaging our Testing team:</p>
-                <li>Initial assessment
-                  <ul>
+                <li class="list-parent">Initial assessment
+                  <ul class="list-nested">
                     <li>Understanding testing needs i.e. mobile and website test, general scope etc.</li>
                   </ul>
                 </li>
-                <li>Test Planning
-                  <ul>
+                <li class="list-parent">Test Planning
+                  <ul class="list-nested">
                     <li>Scope /scenario agreement</li>
                     <li>Test case writing</li>
                     <li>Test data</li>
@@ -635,9 +638,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-project-mgmt-wide.jpg" data-src="images/content/img-content-project-mgmt-wide.jpg" class="lazyload" alt="Project manager writing on a whiteboard.">
                   <noscript>
-                    <img src="images/content/img-content-analytics-wide.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-analytics-wide.jpg" alt="Project manager writing on a whiteboard.">
                   </noscript>
                 </picture>
               </figure>
@@ -656,9 +659,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
                   <noscript>
-                    <img src="images/content/img-content-testing-wide.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
                   </noscript>
                 </picture>
               </figure>
@@ -676,9 +679,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
                   <noscript>
-                    <img src="images/content/img-content-integration-team-wide.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
                   </noscript>
                 </picture>
               </figure>
@@ -697,9 +700,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-report-sample-02-wide.jpg" data-src="images/content/img-content-report-sample-02-wide.jpg" class="lazyload" alt="Sample of client data reports.">
                   <noscript>
-                    <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                    <img src="images/content/img-content-report-sample-02-wide.jpg" alt="Sample of client data reports.">
                   </noscript>
                 </picture>
               </figure>
